--- a/.github/workflows/auto-checkin.yml
+++ b/.github/workflows/auto-checkin.yml
@@ -7,9 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
@@ -25,3 +23,15 @@ jobs:
         CONFIG: ${{secrets.CONFIG}}
       run: |
         python main.py
+  del_runs:
+      runs-on: ubuntu-latest
+      permissions:
+        actions: write
+      steps:
+        - name: Delete workflow runs
+          uses: Mattraks/delete-workflow-runs@v2
+          with:
+            token: ${{ github.token }}
+            repository: ${{ github.repository }}
+            retain_days: 1
+            keep_minimum_runs: 6
